[metadata]
name = piksi_tools
description = Python tools for the Piksi GNSS receiver.
long_description = file: README.rst
author = Swift Navigation, Inc.
author_email = dev@swift-nav.com
url = https://github.com/swift-nav/piksi_tools
license = BSD 3-Clause License
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[wheel]
universal = 1

[options]
packages = find:
install_requires =
    numpy
    configparser
    pyserial
    six
    monotonic
    PyYAML
    libsettings
    sbp

[options.extras_require]
test =
    pytest
    pytest-faulthandler
ftdi =
    pylibftdi
